--- a/spring.demo.common/pom.xml
+++ b/spring.demo.common/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>spring.demo.core</artifactId>
+	<artifactId>spring.demo.common</artifactId>
 
 	<dependencies>
 		<!--other-->
